fixing overflow of react- confetti

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,7 @@
     align-items: center;
     background-color: $clr-bg;
     position: relative;
+    overflow: hidden;
 
     &__score {
         position: absolute;
